--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           java-version: '16'
           distribution: 'adopt'
       - name: Compile with Maven
-        run: mvn package
+        run: mvn compile
       - name: Build Docker Image
         run: docker build -t semimage .
       - name: Run image
